# rust-crud-api

./: Cargo.toml
src/: api_doc.rs  main.rs  settings.rs
src/domain/entities/: user.rs
src/infrastructure/repositories/: abstract_repository.rs  mod.rs  users_repository.rs
src/interfaces/: api_controlers.rs  mod.rs
